<resources>
    <string name="app_name">LoginProject</string>
    <string name="SHOPPINGAPPLICATION">SHOPPING APPLICATION</string>
    <string name="logginsuccessful">loggin successful</string>
    <string name="Logout">Logout</string>
    <string name="enteryourmailId">enter your email id</string>
    <string name="Password">Password</string>
    <string name="enterYourPassword">enter your password</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="idonthaveanAccount">I DON\'T HAVE AN ACCOUNT</string>
    <string name="TotalBillAmount">Total Bill Amount</string>
    <string name="emailerrormessage">email Id is Null. enter vaild Email</string>
    <string name="passwordErrorMessage">Password is null. enter valid Password </string>
    <string name="message">check your email and Password</string>
    <string name="register">REGISTER</string>
    <string name="ihaveanAccount">I HAVE AN ACCOUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SuperCart">Super Cart</string>
    <string name="emailId">Email id</string>
    <string name="FullName">Full Name</string>
    <string name="mobileNo">Mobile No</string>
    <string name="subcategories">Sub Categories</string>
    <string name="emptyProductList">Products list is empty</string>
    <string name="addToCart">Add To cart</string>
    <string name="checkout">Checkout</string>
    <string name="addNewAddress">Add New Address</string>
    <string name="addressTilte">Address Title</string>
    <string name="address">"Address "</string>
    <string name="cancel">CANCEL</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="selectDeliveryAddress">Select Delivery Address</string>
    <string name="selectPayment">Select Payment Option</string>
    <string name="cartItems">Cart Items</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="confirmPlaceOrder">Confirm And Place Order</string>
</resources>