<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/addNewAddress"
        android:id="@+id/title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addressTilte"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:id="@+id/tv_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:hint="enter address title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/et_title"
        android:id="@+id/tv_address"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        android:hint="enter address"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@+id/et_address"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_address"/>


</androidx.constraintlayout.widget.ConstraintLayout>