<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_percent="0.10"
        android:id="@+id/gV10"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_percent="0.90"
        android:id="@+id/gV90"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/SHOPPINGAPPLICATION"
        android:id="@+id/loginheader"
        android:textStyle="bold"
        android:textSize="@dimen/sp30"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/loginheader"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/loginImage"
        android:src="@drawable/loginimage"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Email id"
        android:layout_marginTop="@dimen/dp10"
        android:id="@+id/emailtxt"
        app:layout_constraintStart_toEndOf="@+id/gV10"
        app:layout_constraintTop_toBottomOf="@+id/loginImage" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/enteryourmailId"
        android:minHeight="@dimen/dp48"
        app:layout_constraintStart_toEndOf="@+id/gV10"
        app:layout_constraintTop_toBottomOf="@+id/emailtxt" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordtitle"
        app:layout_constraintStart_toEndOf="@+id/gV10"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <EditText
        android:id="@+id/password"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterYourPassword"
        android:minHeight="@dimen/dp48"
        app:layout_constraintStart_toEndOf="@+id/gV10"
        app:layout_constraintTop_toBottomOf="@+id/passwordtitle" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        android:layout_marginTop="@dimen/dp10"
        android:id="@+id/forgotPass"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@+id/gV10"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp50"
        android:background="@color/blue"
        android:text="@string/LOGIN"
        android:textColor="#212121"
        app:layout_constraintEnd_toStartOf="@+id/gV90"
        app:layout_constraintStart_toStartOf="@+id/gV10"
        app:layout_constraintTop_toBottomOf="@+id/forgotPass" />

    <TextView
        android:id="@+id/noaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idonthaveanAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/gV10"
        app:layout_constraintEnd_toStartOf="@+id/gV90"
        android:textColor="@color/red"/>




</androidx.constraintlayout.widget.ConstraintLayout>