<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/register"
        android:id="@+id/loginheader"
        android:textStyle="bold"
        android:textSize="@dimen/sp30"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/blue"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"

        android:orientation="vertical" >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full Name" />

        <EditText
            android:id="@+id/et_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter your full name"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp20"
            android:layout_height="wrap_content"
            android:text="Mobile No" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_mobileNo"
            android:minHeight="48dp"
            android:hint="enter your mobile number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:text="Email Id" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_emailId"
            android:minHeight="48dp"
            android:hint="@string/enteryourmailId" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:text="Password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:minHeight="48dp"
            android:hint="@string/enterYourPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:layout_gravity="center_horizontal"
            android:background="@color/blue"
            android:text="@string/register"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/haveaccount"
            android:layout_marginTop="@dimen/dp50"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ihaveanAccount"
            android:textColor="@color/red"/>

    </LinearLayout>








</LinearLayout>