<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkout.checkoutfragments.SummaryFragment">

 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/dp20">


     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/cartItems"
         android:layout_marginTop="20dp"
         android:id="@+id/title"
         android:textSize="@dimen/sp30"
         android:layout_marginRight="@dimen/dp10"/>

     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_goneMarginTop="@dimen/dp10"
         android:id="@+id/recyclerView"
         app:layout_constraintTop_toBottomOf="@+id/title"
         android:layout_marginTop="@dimen/dp10"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/TotalBillAmount"
         android:layout_marginTop="@dimen/dp20"
         android:id="@+id/txtBill"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
         android:textSize="@dimen/sp30"
         android:layout_marginEnd="@dimen/dp10"/>

     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/totalBill"
         android:textSize="@dimen/sp30"
         tools:text="total"
         android:layout_marginTop="@dimen/dp20"
         android:textColor="@color/red"
         android:layout_marginLeft="@dimen/sp18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
         app:layout_constraintStart_toEndOf="@+id/txtBill"/>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtAddressTitle"
         android:text="@string/deliveryAddress"
         app:layout_constraintTop_toBottomOf="@+id/totalBill"
         android:layout_marginTop="@dimen/dp20"
         android:textSize="@dimen/sp20"/>
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/cardview"
      app:layout_constraintTop_toBottomOf="@+id/txtAddressTitle"
      android:layout_marginTop="@dimen/dp20">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tools:text =" title"
          android:id="@+id/addressTitle"
          android:textSize="@dimen/dp20"
          android:layout_marginTop="@dimen/dp10" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tools:text =" title"
          android:id="@+id/address"
          android:layout_marginTop="@dimen/dp10" />


  </LinearLayout>



  </androidx.cardview.widget.CardView>


     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text =" payment type"
         android:id="@+id/paymentOption"
         android:layout_marginTop="@dimen/dp48"
         app:layout_constraintTop_toBottomOf="@+id/cardview"/>

     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirmPlaceOrder"
         android:id="@+id/confirm"
         app:layout_constraintTop_toBottomOf="@+id/paymentOption"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/dp20"
         android:layout_marginBottom="20dp"
         android:background="@color/blue"/>




 </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>